crates/component-shape-gpui/tests/ui/value_binding_without_impl.rs
use component_shape_gpui::component_shape;

struct InputState;

component_shape! {
    pub struct MissingValueBindingImpl {
        type State = InputState;
        value = String;
        value_binding;
    }
}

fn main() {}
